# spreadtrees

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md  cheatsheet.md  data-demo.sql  data-ourspace.sql  docker-compose.yml  entities.csv  example.py  hierarchies.csv  loaddata.sh  requirements.txt  sample-queries.sql  schema.sql
sql/: README.md  data-demo.sql  data-ourspace.sql  obsolete-functions.sql  queries.sql  sample-queries.sql  schema.sql  versioning.sql
src/: main.rs  postgres-cheatsheet.md
