[package]
name = "spreadtrees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.7", features = ["array-impls"] }
