[package]
name = "spreadtrees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
futures-util = "0.3.26"
include-postgres-sql = { version = "0.1.10", features = ["tokio"] }
include-sql = { version = "0.2.5", features = ["async"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
tokio-postgres = { version = "0.7.7", features = ["array-impls"] }
